--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test-mercadolibre",
+  "name": "server-test-mercadolibre",
   "version": "1.0.0",
-  "description": "Ejercicio pre-empleo",
-  "main": "index.js",
+  "description": "server-test-mercadolibre",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,10 @@
   },
   "homepage": "https://gitlab.com/b.martinez/test-mercadolibre#README",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "nunjucks": "^3.1.3",
+    "promises-all": "^1.0.0",
+    "request": "^2.87.0"
   }
 }
